--- a/assignment_004_rmarkdown.Rmd
+++ b/assignment_004_rmarkdown.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "assignment_004_rmarkdown"
+title: "Assignment_004_rmarkdown"
 author: "Derek Anderson"
 date: "`r Sys.Date()`"
 output:
@@ -15,24 +15,21 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(ggplot2)
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+This is an example of R Code
+```{r R code example, include=TRUE, echo=FALSE}
+# anything you write in here is r-code and will not be executed
+# include = false will run but not show in back ground
+# echo can show output
+summary(mtcars)
+```
+This is an example of figures
+```{r include figures}
+data("mtcars")
+ggplot(mtcars, aes(x = wt, y = mpg)) +
+  geom_point()
 ```
 
-## Including Plots
 
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
