--- a/assignment_004_rmarkdown.Rmd
+++ b/assignment_004_rmarkdown.Rmd
@@ -3,11 +3,11 @@ title: "Assignment_004_rmarkdown"
 author: "Derek Anderson"
 date: "`r Sys.Date()`"
 output:
-  md_document:
-    variant: gfm
   html_document:
     toc: true
     toc_float: true
+  md_document:
+    variant: gfm
   word_document:
   pdf_document:
      
@@ -63,8 +63,8 @@ https://agriculture.auburn.edu/about/directory/faculty/zachary-noel/
 ### Images
 
 #If you forgot the exclamation mark (!), it will become just a link
-![Included Figure 1](assignment_004_rmarkdown_files\figure-gfm\include figures-1.png)
-![Pressure Figure](assignment_004_rmarkdown_files\figure-gfm\pressure-1.png)
+![Included Figure 1](include figures-1.png)
+![Pressure Figure](pressure-1.png)
 
 ### Tables
 
