--- a/README.Rmd
+++ b/README.Rmd
@@ -45,5 +45,6 @@ Here you’ll find:
 Feel free to browse and copy the code if you are also just learning R and Rmarkdown.
 
 ### Clone this repository:
-   ```bash
-   git clone https://github.com/dbanderson1/plpa_6820_assignments.git
+```{bash}
+git clone https://github.com/dbanderson1/plpa_6820_assignments.git
+```
