--- a/Coding_Challenge_4.Rmd
+++ b/Coding_Challenge_4.Rmd
@@ -126,10 +126,12 @@ b.	GitHub flavored markdown (.md file). &#x2611;
 ## Question 5
 
 6 pts. Now edit, commit, and push the README file for your repository and include the following elements.
-a.	A clickable link in your README to your GitHub flavored .md file
-b.	A file tree of your GitHub repository. 
+
+a.	A clickable link in your README to your GitHub flavored .md file. &#x2611;
+
+b.	A file tree of your GitHub repository. &#x2611;
 
 ## Question 6
 
-1 pt. Please turn in the file generated in question 3a to canvas with a clickable link to your GitHub repository within the document. 
+1 pt. Please turn in the file generated in question 3a to canvas with a clickable link to your GitHub repository within the document. &#x2611;
 
