--- a/README.Rmd
+++ b/README.Rmd
@@ -35,10 +35,11 @@ Here you’ll find:
 - `Assignment_001.R` – introductory to R coding
 - `assignment_002_coding_notes.R` – plotting, layering, changing appearance, faceting with ggplot
 - `assignment_003_adv_vis2.R` - advanced visualization using ggplot
-- `assignment_004_markdown.md` - learning rmarkdown 
+- `assignment_004_markdown.md` - learning rmarkdown [file](https://github.com/dbanderson1/plpa_6820_assignments/blob/main/assignment_004_rmarkdown.md)
 - `Coding_Challenge_1.R` - coding challenge practicing techniques from assignment_001
 - `Coding_Challenge_2.R` - coding challenge practicing techniques from assignment_002
-- `Coding_Challenge_3.R` - coding challenge practiving techniques from assignment_003
+- `Coding_Challenge_3.R` - coding challenge practicing techniques from assignment_003
+- `Coding_Challenge_4.R` - coding challenge practicing techniques from assignment_004 [file](https://github.com/dbanderson1/plpa_6820_assignments/blob/main/Coding_Challenge_4.md)
 
 ## How to Use
 
