--- a/README.Rmd
+++ b/README.Rmd
@@ -30,16 +30,21 @@ Here you’ll find:
 - Example datasets
 - Practice with reproducible workflows (R, Git, GitHub, R Markdown)
 
-## Files in This Repository
-
-- `Assignment_001.R` – introductory to R coding
-- `assignment_002_coding_notes.R` – plotting, layering, changing appearance, faceting with ggplot
-- `assignment_003_adv_vis2.R` - advanced visualization using ggplot
-- `assignment_004_markdown.md` - learning rmarkdown [file](https://github.com/dbanderson1/plpa_6820_assignments/blob/main/assignment_004_rmarkdown.md)
-- `Coding_Challenge_1.R` - coding challenge practicing techniques from assignment_001
-- `Coding_Challenge_2.R` - coding challenge practicing techniques from assignment_002
-- `Coding_Challenge_3.R` - coding challenge practicing techniques from assignment_003
-- `Coding_Challenge_4.R` - coding challenge practicing techniques from assignment_004 [file](https://github.com/dbanderson1/plpa_6820_assignments/blob/main/Coding_Challenge_4.md)
+## File Tree
+```{bash file tree, eval=FALSE}
+plpa_6820_assignments/
+├── Assignment_001.R 
+├── assignment_002_coding_notes.R 
+├── assignment_003_adv_vis2.R
+├── assignment_004_markdown.Rmd 
+├── assignment_004_markdown.md [download file](https://github.com/dbanderson1/plpa_6820_assignments/blob/main/assignment_004_rmarkdown.md)
+├── Coding_Challenge_1.R
+├── Coding_Challenge_2.R
+├── Coding_Challenge_3.R
+├── Coding_Challenge_4.Rmd
+├── Coding_Challenge_4.md [file](https://github.com/dbanderson1/plpa_6820_assignments/blob/main/Coding_Challenge_4.md)
+└── .gitignore
+```
 
 ## How to Use
 
